--- a/index.html
+++ b/index.html
@@ -113,32 +113,45 @@
 
       <div class="experience-details-container">
         <div class="about-containers">
-          <!-- Skills Column 1 -->
+
+          <!-- Column 1 -->
           <div class="details-container">
-            <h2 class="experience-sub-title">Data & ML</h2>
+            <h2 class="experience-sub-title">Data Science & Machine Learning</h2>
             <div class="article-container">
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Python</h3><p>Experienced</p></div></article>
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>PyTorch</h3><p>Intermediate</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>NumPy & Pandas</h3><p>Experienced</p></div></article>
               <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>scikit-learn</h3><p>Experienced</p></div></article>
               <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>TensorFlow</h3><p>Intermediate</p></div></article>
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Hugging Face</h3><p>Intermediate</p></div></article>
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>LangChain</h3><p>Intermediate</p></div></article>
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Pandas & NumPy</h3><p>Experienced</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>PyTorch</h3><p>Experienced</p></div></article>
               <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Matplotlib & Seaborn</h3><p>Experienced</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>LangChain</h3><p>Intermediate</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Hugging Face</h3><p>Intermediate</p></div></article>
             </div>
           </div>
 
-          <!-- Skills Column 2 -->
+          <!-- Column 2 -->
           <div class="details-container">
             <h2 class="experience-sub-title">Data Engineering & Tools</h2>
             <div class="article-container">
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>SQL (PostgreSQL/MySQL/SQLite)</h3><p>Intermediate</p></div></article>
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Git & GitHub</h3><p>Intermediate</p></div></article>
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Jupyter Notebook</h3><p>Experienced</p></div></article>
-              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>C++</h3><p>Intermediate</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>SQL (PostgreSQL / MySQL / SQLite)</h3><p>Experienced</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Git & GitHub</h3><p>Experienced</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Data Pipelines & Preprocessing</h3><p>Intermediate</p></div></article>
             </div>
           </div>
+
+          <!-- Column 3 -->
+          <div class="details-container">
+            <h2 class="experience-sub-title">Programming & Core CS</h2>
+            <div class="article-container">
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Python (OOP, APIs, Scripting)</h3><p>Experienced</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>C++</h3><p>Intermediate</p></div></article>
+              <article><img src="./assets/checkmark.png" class="icon" alt=""><div><h3>Software Design & Algorithms</h3><p>Intermediate</p></div></article>
+            </div>
+          </div>
+
         </div>
+      </div>
+    </section>
+
 
         <!-- Roles -->
         <div class="about-containers">
